--- a/bin/dune
+++ b/bin/dune
@@ -1,4 +1,4 @@
 (executable
  (public_name real_world_ocaml)
  (name main)
- (libraries real_world_ocaml))
+ (libraries base stdio real_world_ocaml))
